--- a/ansible/playbooks/provision/roles/aervits.hbase/vars/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.hbase/vars/main.yml
@@ -1,5 +1,6 @@
 ---
 # vars file for aervits.hbase
-  hbase_version: "hbase-1.3.2"
-  hbase_url: "https://dist.apache.org/repos/dist/dev/hbase/{{ hbase_version }}RC1/{{ hbase_version }}-bin.tar.gz"
-  hbase_sha_sum: 9125108AA350A1453D89E38CD7184D6B896FF067928FEEF3B7C43F6CEB205AD2E241D85ED2EB8C0C90E61C9676C205FA2B40AAD65F4B0086624C968291A06121
+  hbase_version: "hbase-1.4.4"
+  hbase_short_version: "1.4.4"
+  hbase_url: "http://www-us.apache.org/dist/hbase/{{ hbase_short_version }}/{{ hbase_version }}-bin.tar.gz"
+  hbase_sha_sum: 83DF3A60E937FBE38201AF249A638027541372764C05199EC64AB2220040C6A75BE4EFE7EE952FF6A9689478CDB05B860243403FB6366DB211B85CA5B1DB11C8
