--- a/ansible/playbooks/Vagrantfile
+++ b/ansible/playbooks/Vagrantfile
@@ -71,8 +71,8 @@ Vagrant.configure("2") do |config|
   # SHELL
 
   config.vm.provision "ansible" do |ansible|
-     ansible.playbook = "provision/phoenix-playbook.yml"
-
+     ansible.playbook = "provision/nifi-playbook.yml"
+     ansible.compatibility_mode = "2.0"
     # enable for debugging
     # ansible.verbose = "vvv"
   end 
