--- a/ansible/playbooks/provision/phoenix-playbook.yml
+++ b/ansible/playbooks/provision/phoenix-playbook.yml
@@ -1,13 +1,13 @@
 ---
 - hosts: all
   roles:
-#    - aervits.jdk
-#    - aervits.ssh
-#    - aervits.users
-#    - aervits.hosts
-#    - aervits.common
-#    - aervits.hadoop
-#    - aervits.hbase
+    - aervits.jdk
+    - aervits.ssh
+    - aervits.users
+    - aervits.hosts
+    - aervits.common
+    - aervits.hadoop
+    - aervits.hbase
     - aervits.phoenix
     - aervits.spark
   remote_user: vagrant
