--- a/ansible/playbooks/provision/roles/aervits.phoenix/vars/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.phoenix/vars/main.yml
@@ -1,6 +1,14 @@
 ---
 # vars file for aervits.phoenix
-#  phoenix_version: "apache-phoenix-5.0.0-alpha-HBase-2.0"
-#  phoenix_url: "http://www-us.apache.org/dist/phoenix/{{ phoenix_version }}/bin/{{ phoenix_version }}-bin.tar.gz"
-#  phoenix_sha512_sum: 361f9b671cdddf9326243afa6fa52d7f
 
+"phoenix_version": {
+    "full": "apache-phoenix-5.0.0-HBase-2.0",
+    "major": 5,
+    "minor": 0,
+    "revision": 0,
+    "string": "apache-phoenix-5.0.0-HBase-2.0",
+    "hbase_branch": "2.0",
+    "rc": "-rc0"
+}
+phoenix_url: "https://dist.apache.org/repos/dist/dev/phoenix/{{ phoenix_version.full }}{{ phoenix_version.rc}}/bin/{{ phoenix_version.string }}-bin.tar.gz"
+phoenix_sha512_sum: 3ff6f5f6757362e768491c8d97fb1bc1c661f6b9147495a6167ed9a6050afe09f0b746df5a005991359a0f0bb25c69adb966123158a8671e27f157e31ab59f09 
