--- a/ansible/playbooks/Vagrantfile
+++ b/ansible/playbooks/Vagrantfile
@@ -72,7 +72,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "ansible" do |ansible|
      ansible.compatibility_mode = "2.0"
-     ansible.playbook = "provision/hbase-playbook.yml"
+     ansible.playbook = "provision/dev-playbook.yml"
     # enable for debugging
     # ansible.verbose = "vvv"
   end 
