--- a/ansible/playbooks/provision/roles/aervits.devtools/tasks/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.devtools/tasks/main.yml
@@ -11,7 +11,7 @@
     get_url:
       url: "{{ maven_url }}"
       dest: "/tmp/{{ maven_version }}.bin.tar.gz"
-      checksum: "md5:{{ maven_md5_sum }}"
+      checksum: "sha256:{{ maven_sha_sum }}"
 
   - name: create maven directory
     file:
