--- a/ansible/playbooks/provision/roles/aervits.hbase/defaults/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.hbase/defaults/main.yml
@@ -1,5 +1,14 @@
 ---
 # defaults file for aervits.hbase
-  hbase_version: "hbase-1.3.2"
-  hbase_url: "https://dist.apache.org/repos/dist/dev/hbase/{{ hbase_version }}RC1/{{ hbase_version }}-bin.tar.gz"
-  hbase_sha_sum: 9125108AA350A1453D89E38CD7184D6B896FF067928FEEF3B7C43F6CEB205AD2E241D85ED2EB8C0C90E61C9676C205FA2B40AAD65F4B0086624C968291A06121
+
+"hbase_version": {
+    "full": "hbase-1.4.8",
+    "major": 1,
+    "minor": 4,
+    "revision": 8,
+    "version_string": "1.4.8",
+    "rc": ""
+}
+
+hbase_url: "http://www-us.apache.org/dist/hbase/{{ hbase_version.version_string }}/{{ hbase_version.full }}-bin.tar.gz"
+hbase_sha_sum: 84473A7A971AE95F407CF9C9AB9024D5802C44D5284814F141805DCE67A483526348D075B4958D97B10A808C87C88244F7C69387852CABADCE2F86314F0A8EB2
