--- a/ansible/playbooks/provision/roles/aervits.hbase/tasks/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.hbase/tasks/main.yml
@@ -25,18 +25,18 @@
   - name: configure hbase-site.xml
     template:
       src: templates/hbase-site.xml
-      dest: "/opt/hbase/{{ hbase_version }}/conf/hbase-site.xml"
+      dest: "/opt/hbase/{{ hbase_version.full }}/conf/hbase-site.xml"
 
   - name: edit hbase-env.sh JVM args
     lineinfile:
-      dest: "/opt/hbase/{{ hbase_version }}/conf/hbase-env.sh"
+      dest: "/opt/hbase/{{ hbase_version.full }}/conf/hbase-env.sh"
       regexp: '^export HBASE_OPTS='
       line: 'export HBASE_OPTS="-XX:+UseConcMarkSweepGC -XX:ParallelGCThreads=4"'
       create: yes
 
   - name: change hbase directory permissions
     file:
-      path: "/opt/hbase/{{ hbase_version }}"
+      path: "/opt/hbase/{{ hbase_version.full }}"
       state: directory
       owner: hbase
       group: hbase
@@ -46,7 +46,7 @@
   - name: export HBASE_HOME
     lineinfile:
       path: /etc/environment
-      line: export HBASE_HOME="/opt/hbase/{{ hbase_version }}"
+      line: export HBASE_HOME="/opt/hbase/{{ hbase_version.full }}"
       state: present
       create: yes
 
