--- a/ansible/playbooks/provision/phoenix-playbook.yml
+++ b/ansible/playbooks/provision/phoenix-playbook.yml
@@ -10,6 +10,7 @@
     - aervits.hbase
     - aervits.phoenix
     - aervits.spark
+    - aervits.devtools
   remote_user: vagrant
   become: true
   vars:
