--- a/ansible/playbooks/provision/roles/aervits.hbase/vars/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.hbase/vars/main.yml
@@ -2,13 +2,15 @@
 # vars file for aervits.hbase
 
 "hbase_version": {
-    "full": "hbase-1.2.9",
+    "full": "hbase-1.5.0",
     "major": 1,
-    "minor": 2,
-    "revision": 9,
-    "version_string": "1.2.9",
-    "rc": "RC0"
+    "minor": 5,
+    "revision": 0,
+    "version_string": "1.5.0",
+    "rc": "RC2"
 }
 
 hbase_url: "https://dist.apache.org/repos/dist/dev/hbase/{{ hbase_version.full }}{{ hbase_version.rc }}/{{ hbase_version.full }}-bin.tar.gz"
-hbase_sha_sum: 4D9E12788634E250841E55CB8879EAC15C9BCF7F09DE018AAD0CCB0E118C2D02BCA5F4F3EACB9857D8236E076E3CD0A443B905673AB5C83CAD642547037588BA 
+hbase_sha_sum: 4CEFD381 CFAAA776 614D77AD 9E0FDBC3 45FBF00D E44DA598
+                        F9E4B6A4 3DD66488 E9C6C78B 6F2D61F9 225E0AE1 4856C2CF
+                        07CF1C62 DBCAC371 A0933DCB F8FD439A
