--- a/ansible/playbooks/provision/roles/aervits.hbase/vars/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.hbase/vars/main.yml
@@ -1,16 +1,16 @@
 ---
-# defaults file for aervits.hbase
+# vars file for aervits.hbase
 
 "hbase_version": {
-    "full": "hbase-2.1.3",
+    "full": "hbase-2.2.0",
     "major": 2,
-    "minor": 1,
-    "revision": 3,
-    "version_string": "2.1.3",
-    "rc": ""
+    "minor": 2,
+    "revision": 0,
+    "version_string": "2.2.0",
+    "rc": "RC0"
 }
 
-hbase_url: "http://www-us.apache.org/dist/hbase/{{ hbase_version.version_string }}/{{ hbase_version.full }}-bin.tar.gz"
-hbase_sha_sum: F8CB92DC E771E198 FD1EADA7 D036896D 7D46CDA5 D896E06E
-                        62321112 E9CC1219 E87FBE2A E20C76CD E60675C2 FEFC729B
-                        0F6E4A84 792F7D6B 8E06EFC4 7DFB851B
+hbase_url: "https://dist.apache.org/repos/dist/dev/hbase/{{ hbase_version.version_string }}{{ hbase_version.rc}}/{{ hbase_version.full }}-bin.tar.gz"
+hbase_sha_sum: D121EA52 CCC064F5 A2A2EE5B 5C965098 3FCD69CB 2C406D33
+                        D276BF71 7DA241AD 8BC1D495 5BBF9E75 099C4D97 F7483F09
+                        B93A2EB5 01AEDDCE F433F142 FDEA7D3D
