added version information to deployment

--- a/ansible/playbooks/provision/roles/aervits.hbase/tasks/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.hbase/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 # tasks file for aervits.hbase
-  - name: download hbase release
+  - name: download hbase {{ hbase_version }} release
     get_url:
       url: "{{ hbase_url }}"
       dest: "/tmp/{{ hbase_version }}.bin.tar.gz"
