--- a/ansible/playbooks/provision/roles/aervits.hadoop/tasks/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.hadoop/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 # tasks file for aervits.hadoop
-  - name: download hadoop release
+  - name: download hadoop {{ hadoop_version }} release
     get_url:
       url: "{{ hadoop_url }}"
       dest: "/tmp/{{ hadoop_version }}.tar.gz"
