--- a/ansible/playbooks/provision/roles/aervits.hbase/vars/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.hbase/vars/main.yml
@@ -9,8 +9,7 @@
     "version_string": "1.4.10",
     "rc": "RC0"
 }
-
-hbase_url: "https://dist.apache.org/repos/dist/dev/hbase/{{ hbase_version.version_string }}{{ hbase_version.rc}}/{{ hbase_version.full }}-bin.tar.gz"
+hbase_url: "https://dist.apache.org/repos/dist/dev/hbase/{{ hbase_version.full }}{{ hbase_version.rc}}/{{ hbase_version.full }}-bin.tar.gz"
 hbase_sha_sum: BC6B1A8F 010F226A 0DE946EE 3304D426 BF03E6E9 54F1E3FB
                          46E4E7F3 016BAD48 98CA69DA 0D2F5CC8 B988FC64 AEB730E1
                          685B6ACC 8C1A85B3 4603118E DACA28B0
