--- a/ansible/playbooks/provision/roles/aervits.devtools/defaults/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.devtools/defaults/main.yml
@@ -1,5 +1,13 @@
 ---
 # defaults file for aervits.devtools
-  maven_version: "apache-maven-3.6.0"
-  maven_url: "http://www-us.apache.org/dist/maven/maven-3/3.6.0/binaries/{{ maven_version }}-bin.tar.gz"
-  maven_sha_sum: fae9c12b570c3ba18116a4e26ea524b29f7279c17cbaadc3326ca72927368924d9131d11b9e851b8dc9162228b6fdea955446be41207a5cfc61283dd8a561d2f
+
+"maven_version": {
+    "full": "apache-maven-3.6.1",
+    "major": 3,
+    "minor": 6,
+    "revision": 1,
+    "version_string": "3.6.1",
+    "rc": ""
+}
+  maven_url: "http://www-us.apache.org/dist/maven/maven-3/{{ maven_version.version_string }}/binaries/{{ maven_version.full }}-bin.tar.gz"
+  maven_sha_sum: b4880fb7a3d81edd190a029440cdf17f308621af68475a4fe976296e71ff4a4b546dd6d8a58aaafba334d309cc11e638c52808a4b0e818fc0fd544226d952544
