--- a/ansible/playbooks/provision/hbase-playbook.yml
+++ b/ansible/playbooks/provision/hbase-playbook.yml
@@ -8,7 +8,7 @@
     - aervits.common
     - aervits.hadoop
     - aervits.hbase
-#    - aervits.spark
+    - aervits.spark
     - aervits.devtools
   remote_user: vagrant
   become: true
