--- a/ansible/playbooks/Vagrantfile
+++ b/ansible/playbooks/Vagrantfile
@@ -27,13 +27,21 @@ Vagrant.configure("2") do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-  config.vm.network "private_network", ip: "192.168.33.10"
-  config.vm.hostname = "hadoop.example.com"
+#  config.vm.network "private_network", ip: "192.168.33.10"
+ # config.vm.hostname = "hadoop.example.com"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
   # your network.
   # config.vm.network "public_network"
+
+  # Provider-specific configuration so you can fine-tune various
+  # backing providers for Vagrant. These expose provider-specific options.
+  # Example for VirtualBox:
+
+  # vbguest options https://github.com/dotless-de/vagrant-vbguest
+  # turn off vbox guest additions install
+  config.vbguest.no_install = false # if true, turn off synced_folder as it will fail otherwise
 
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
@@ -41,11 +49,6 @@ Vagrant.configure("2") do |config|
   # argument is a set of non-required options.
   config.vm.synced_folder "~/Downloads", "/vagrant_data", type: "virtualbox", SharedFoldersEnableSymlinksCreate: false
 
-  # Provider-specific configuration so you can fine-tune various
-  # backing providers for Vagrant. These expose provider-specific options.
-  # Example for VirtualBox:
-  #
-  
   config.vm.provider "virtualbox" do |vb|
      vb.memory = "8192"
 #     fix for message with NIC vulnerability but still doesn't address the issue
