--- a/ansible/playbooks/Vagrantfile
+++ b/ansible/playbooks/Vagrantfile
@@ -27,8 +27,8 @@ Vagrant.configure("2") do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-#  config.vm.network "private_network", ip: "192.168.33.10"
- # config.vm.hostname = "hadoop.example.com"
+  # config.vm.network "private_network", ip: "192.168.33.10"
+  config.vm.hostname = "hadoop.example.com"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
@@ -41,13 +41,13 @@ Vagrant.configure("2") do |config|
 
   # vbguest options https://github.com/dotless-de/vagrant-vbguest
   # turn off vbox guest additions install
-  config.vbguest.no_install = false # if true, turn off synced_folder as it will fail otherwise
+  config.vbguest.no_install = true # if true, turn off synced_folder as it will fail otherwise
 
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
-  config.vm.synced_folder "~/Downloads", "/vagrant_data", type: "virtualbox", SharedFoldersEnableSymlinksCreate: false
+  # config.vm.synced_folder "~/Downloads", "/vagrant_data", type: "virtualbox", SharedFoldersEnableSymlinksCreate: false
 
   config.vm.provider "virtualbox" do |vb|
      vb.memory = "8192"
@@ -73,7 +73,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "ansible" do |ansible|
      ansible.compatibility_mode = "2.0"
-     ansible.playbook = "provision/hbase-playbook.yml"
+     ansible.playbook = "provision/hadoop-playbook.yml"
     # enable for debugging
     # ansible.verbose = "vvv"
   end 
