--- a/ansible/playbooks/provision/hadoop-playbook.yml
+++ b/ansible/playbooks/provision/hadoop-playbook.yml
@@ -1,12 +1,12 @@
 ---
 - hosts: all
   roles:
-    - aervits.jdk
-    - aervits.ssh
-    - aervits.users
+#    - aervits.jdk
+#    - aervits.ssh
+#    - aervits.users
     - aervits.hosts
-    - aervits.common
-    - aervits.hadoop
+#    - aervits.common
+#    - aervits.hadoop
   remote_user: vagrant
   become: true
   vars:
