--- a/ansible/playbooks/provision/roles/aervits.phoenix/defaults/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.phoenix/defaults/main.yml
@@ -1,14 +1,15 @@
 ---
 # defaults file for aervits.phoenix
 "phoenix_version": {
-    "full": "apache-phoenix-4.14.0-HBase-1.4",
-    "major": 2,
-    "minor": 1,
-    "revision": 1,
-    "string": "apache-phoenix-4.14.0-HBase-1.4",
+    "full": "apache-phoenix-4.14.2-HBase-1.4",
+    "major": 4,
+    "minor": 14,
+    "revision": 2,
+    "string": "apache-phoenix-4.14.2-HBase-1.4",
     "hbase_branch": "1.4",
-    "rc": "-rc1"
+    "rc": ""
 }
-#  phoenix_version: "apache-phoenix-4.14.0-HBase-1.4"
-phoenix_url: "https://dist.apache.org/repos/dist/dev/phoenix/{{ phoenix_version.full }}-rc1/bin/{{ phoenix_version.string }}-bin.tar.gz"
-phoenix_sha512_sum: 2b18281c5f82a72b10a7310ee01f664ece6a54b7b08499aa3020c041fd3a792b6ead1526a0fc621dec161773d608b5b686c5efe312c6df7c8371fac1e2cfbab3
+
+https://www-us.apache.org/dist/phoenix/apache-phoenix-4.14.2-HBase-1.4/bin/apache-phoenix-4.14.2-HBase-1.4-bin.tar.gz
+phoenix_url: "https://www-us.apache.org/dist/phoenix/{{ phoenix_version.full }}{{ phoenix_version.rc }}/bin/{{ phoenix_version.string }}-bin.tar.gz"
+phoenix_sha512_sum: 76376905627dda58954204b7cd52e01c573c0e745c83d85f9281dd29a74205c30dc86a3ccec3092e39edcb271f264635d039f89c0f2b1f138eedd614d8c26382
