--- a/ansible/playbooks/provision/roles/aervits.phoenix/vars/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.phoenix/vars/main.yml
@@ -1,2 +1,14 @@
 ---
-# vars file for aervits.phoenix
+# defaults file for aervits.phoenix
+"phoenix_version": {
+    "full": "apache-phoenix-4.14.3-HBase-1.4",
+    "major": 4,
+    "minor": 14,
+    "revision": 3,
+    "string": "apache-phoenix-4.14.3-HBase-1.4",
+    "hbase_branch": "1.4",
+    "rc": "-rc1"
+}
+
+phoenix_url: "https://dist.apache.org/repos/dist/dev/phoenix/{{ phoenix_version.full }}{{ phoenix_version.rc }}/bin/{{ phoenix_version.string }}-bin.tar.gz"
+phoenix_sha512_sum: 14b223c2e2084a987f893f1e9a9cfc0430a804ef22f52d577185e0a1d13348ebc9dc7b3967db6531a437624bea8d41c376fb2669fd710c7b55128344a65f6b29
