phoenix-4.14.3-HBase-1.4-rc2

--- a/ansible/playbooks/provision/roles/aervits.phoenix/tasks/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.phoenix/tasks/main.yml
@@ -57,6 +57,14 @@
                  <name>hbase.regionserver.wal.codec</name>
                  <value>org.apache.hadoop.hbase.regionserver.wal.IndexedWALEditCodec</value>
                </property>
+               <property>
+                 <name>phoenix.schema.isNamespaceMappingEnabled</name>
+                 <value>true</value>
+               </property>
+               <property>
+                 <name>phoenix.schema.mapSystemTablesToNamespace</name>
+                 <value>true</value>
+               </property>
       insertbefore: "</configuration>"
       backup: yes
 
