--- a/ansible/playbooks/provision/roles/aervits.phoenix/vars/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.phoenix/vars/main.yml
@@ -1,14 +1,2 @@
 ---
-# defaults file for aervits.phoenix
-"phoenix_version": {
-    "full": "apache-phoenix-4.14.3-HBase-1.4",
-    "major": 4,
-    "minor": 14,
-    "revision": 3,
-    "string": "apache-phoenix-4.14.3-HBase-1.4",
-    "hbase_branch": "1.4",
-    "rc": "-rc2"
-}
-
-phoenix_url: "https://dist.apache.org/repos/dist/dev/phoenix/{{ phoenix_version.full }}{{ phoenix_version.rc }}/bin/{{ phoenix_version.string }}-bin.tar.gz"
-phoenix_sha512_sum: bf6c40db7be1c2b160d911ff04cafcfc6b1b14cb7d4751d453fd2877ba0d93c8712ee54eb987e36dee6cdbff2476cc15594d93f45d27b60f7c43be518b07ef24
+# vars file for aervits.phoenix
